--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
   <body>
     <header class="page-header">
       <a class="page-header__logo">
-        <img class="page-header__logo-image" src="#" alt="Логотип Седона">
+        <img src="img/logo.svg" width="170" height="70" alt="Логотип Седона" class="logo">
       </a>
       <nav class="header-navigation">
         <ul class="navigation-list">
@@ -336,7 +336,7 @@
         <p class="subscribe-description">
           Только полезная информация и никакого спама, честное бойскаутское!
         </p>
-        <form class="subscribe-form" action="#" method="post">
+        <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
           <input class="subscribe-form-input" type="email" name="email-subscribe" placeholder="Ваш e-mail">
           <button class="subscribe-form-button" type="submit">
             Подписаться
@@ -376,7 +376,7 @@
           Логотип с ссылкой на html academy
         </h2>
         <a class="footer-logo-htmlacademy-link" href="http://htmlacademy.ru">
-          <img class="footer-logo-htmlacademy-logo" src="images/htmlacademy-logo.svg" alt="Логотип html academy">
+          <img class="footer-logo-htmlacademy-img" src="img/HTMLAcademy.svg" width="115" height="33" alt="Логотип HTML Академии">
         </a>
       </section>
     </footer>
