--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
-     <!-- Добавить картинки и обновить ссылки на них-->
   </head>
   <body>
     <header class="page-header">
       <a class="header-logo">
-        <img src="#" alt="Логотип Сайта">
+        <img src="img/logo.svg" width="140" height="70" alt="Логотип Седона" class="logo">
       </a>
       <nav class="header-navigation">
         <ul class="navigation-list">
@@ -44,7 +43,7 @@
         <h1 class="visually-hidden">
           Седона
         </h1>
-        <img class="hero-welcome-logo" src="#" alt="Добро пожаловать в Седону!">
+        <<img class="hero-welcome-logo" src="img/welcome.svg" width="458" height="352" alt="Добро пожаловать в Седону!">
       </section>
       <section class="reasons-title">
         <h2 class="reasons-title-text">
@@ -201,7 +200,7 @@
           Логотип с ссылкой на html academy
         </h2>
         <a class="footer-logo-htmlacademy-link" href="http://htmlacademy.ru">
-          <img class="footer-logo-htmlacademy-logo" src="images/htmlacademy-logo.svg" alt="Логотип html academy">
+          <img class="footer-logo-htmlacademy-img" src="img/HTMLAcademy.svg" width="115" height="33" alt="Логотип HTML Академии">
         </a>
       </section>
     </footer>
