--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </a>
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a class="navigation-link" href="#">Главная</a>
+            <a class="navigation-link link-active" href="#">Главная</a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">О Седоне</a>
@@ -24,12 +24,12 @@
           </li>
         </ul>
         <ul class="navigation-user">
-          <li class="navigation-user-item">
+          <li class="navigation-user-item navigation-user-search">
             <a class="navigation-link-user" href="#">
               <span class="visually-hidden">Поиск</span>
             </a>
           </li>
-          <li class="navigation-user-item">
+          <li class="navigation-user-item navigation-user-favourite">
             <a class="navigation-link-user" href="#">
               <span class="visually-hidden">Избранное</span>
               <span class="favorite-count">12</span>
@@ -83,7 +83,7 @@
           </li>
           <li class="advantages-item">
             <h3 class="advantages-item-title">
-              Красивая дорога
+              Красивая<br>дорога
             </h3>
             <p class="advantages-item-description">
               Ехать в Седону из Лас-Вегаса совсем не скучно!
@@ -91,7 +91,7 @@
           </li>
           <li class="advantages-item">
             <h3 class="advantages-item-title">
-              Мало туристов
+              Мало<br> туристов
             </h3>
             <p class="advantages-item-description">
               Большинство едет в Гранд Каньон и толпится там
@@ -101,7 +101,7 @@
             <img class="advantages-img" src="img/photo-2.jpg" width="800" height="385" alt="Горы и голубое небо">
             <div class="item-container">
               <h3 class="advantages-item-title">
-              Там есть мост дьявола
+              Там есть <br>мост дьявола
             </h3>
               <p class="advantages-item-description">
               Да, по нему можно пройти! Если вы осмелитесь, разумеется
@@ -125,27 +125,27 @@
         </h2>
         <ul class="advise-list">
           <li class="advise-item">
-            <h3 class="advise-item-title">
+            <h3 class="advise-item-title icon-house">
               Жильё
             </h3>
             <p class="advise-item-description">
-              Рекомендуем пожить в настоящем мотеле, всё как в кино!
+              Рекомендуем пожить <br>в настоящем мотеле,<br>всё как в кино!
             </p>
           </li>
           <li class="advise-item">
-            <h3 class="advise-item-title">
+            <h3 class="advise-item-title icon-food">
               Еда
             </h3>
             <p class="advise-item-description">
-              Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!
+              Всегда заказывайте <br>топовый фирменный бургер,<br> вы не разочаруетесь!
             </p>
           </li>
           <li class="advise-item">
-            <h3 class="advise-item-title">
+            <h3 class="advise-item-title icon-gift">
               Сувениры
             </h3>
             <p class="advise-item-description">
-              Не только китайского, но и настоящего местного производства!
+              Не только китайского,<br> но и настоящего местного производства!
             </p>
           </li>
         </ul>
@@ -170,7 +170,7 @@
               Подпишитесь на рассылку
             </h2>
             <p class="subscribe-description">
-              Только полезная информация и никакого спама, честное бойскаутское!
+              Только полезная информация и никакого спама,<br>честное бойскаутское!
             </p>
             <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
               <input class="subscribe-form-input" type="email" name="email-subscribe" placeholder="Ваш e-mail">
@@ -185,25 +185,52 @@
       <div class="footer-social content-container">
         <ul class="footer-social-list">
           <li class="footer-social-item">
-            <a class="footer-social-link" href="#">
+            <a class="footer-social-link" href="https://vk.com/htmlacademy">
+              <svg class="social-svg" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"
+              width="24" height="14" viewBox="0 0 25 15">
+              <path fill-rule="evenodd"
+                d="M24.1 1.8c.2-.5 0-1-.8-1h-2.6c-.7 0-1 .4-1.1.8 0 0-1.4 3.2-3.3 5.3-.6.6-.9.8-1.2.8-.2 0-.4-.2-.4-.8V1.8c0-.7-.2-1-.8-1h-4c-.5 0-.8.4-.8.6 0 .7 1 .8 1 2.6v3.8c0 .8 0 1-.4 1-.9 0-3-3.3-4.3-7-.3-.7-.5-1-1.2-1H1.6c-.8 0-1 .4-1 .8 0 .7 1 4 4.2 8.5C7 13.2 10 15 12.8 15c1.7 0 1.9-.4 1.9-1v-2.4c0-.7.2-.8.7-.8.4 0 1 .1 2.6 1.6 1.8 1.8 2 2.6 3 2.6h2.7c.7 0 1.1-.4 1-1.1-.3-.8-1.2-1.8-2.3-3-.6-.8-1.5-1.5-1.8-2-.4-.4-.3-.6 0-1 0 0 3.2-4.5 3.5-6Z"
+                clip-rule="evenodd" />
+            </svg>
               <span class="visually-hidden">ВКонтакте</span>
             </a>
           </li>
           <li class="footer-social-item">
-            <a class="footer-social-link" href="#">
+            <a class="footer-social-link" href="https://t.me/htmlacademy">
+              <svg aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="18" height="15"
+              viewBox="0 0 18 17">
+              <path
+                d="M16.8 1 .8 7c-1 .4-1 1-.2 1.3l4.1 1.3 9.5-6c.5-.3.9-.1.5.2l-7.6 7-.3 4.1c.4 0 .6-.2.8-.4l2-2 4.1 3.1c.8.5 1.3.3 1.5-.7L18 2.2c.3-1-.4-1.6-1.1-1.2Z" />
+            </svg>
               <span class="visually-hidden">Телеграмм</span>
             </a>
           </li>
           <li class="footer-social-item">
-            <a class="footer-social-link" href="#">
+            <a class="footer-social-link" href="https://www.youtube.com/htmlacademy">
+              <svg aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="22" height="17"
+              viewBox="0 0 23 18">
+              <path
+                d="M19 .4H3.4C1.6.4.3 2 .3 3.8v10c0 2 1.3 3.6 3.2 3.6h15.7c1.6 0 3.1-1.6 3.1-3.4V3.8C22.1 2 20.8.4 19 .4ZM8 12.9v-8l7.3 4-7.3 4Z" />
+            </svg>
               <span class="visually-hidden">Ютуб</span>
             </a>
           </li>
         </ul>
           <a class="footer-contacts-tel" href="tel:+78128121212">+7 (812) 812-12-12</a>
           <a class="footer-logo-htmlacademy-link" href="http://htmlacademy.ru">
-          <img class="copyright-logo" src="#" alt="Логотип HTML Academy">
+            <svg class="copyright-logo" xmlns="http://www.w3.org/2000/svg" width="115" height="34" viewBox="0 0 115 34">
+              <g clip-path="url(#a)">
+                <path
+                  d="M0 13.3v2.6h2.5v-2.6H0ZM11.6 4.9c-1.6 0-2.8.7-3.6 1.7h-.1V.4h-2v15.5h2v-5.3C7.9 8.5 9.2 7 11.2 7c1.8 0 2.9 1.4 2.9 3.2v5.7h2V9.8c.1-3-1.8-5-4.5-5ZM26.6 5.2h-4.8V1.5h-2v3.8h-1.9v2h1.9v6c0 1.7 1 2.7 2.7 2.7h4.1v-2h-3.7c-.7 0-1.1-.4-1.1-1.1V7.2h4.8v-2ZM41.1 5c-1.6 0-2.9.8-3.5 2h-.1a3.7 3.7 0 0 0-3.4-2c-1.4 0-2.5.8-3.1 1.8h-.1V5.2H29v10.6h2v-5.4c0-2 1-3.5 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2V9.3c.1-2.5-1.4-4.3-3.9-4.3ZM47.8 13c0 1.8 1 2.8 2.8 2.8h2v-2h-1.7c-.7 0-1.1-.4-1.1-1.1V.4h-2V13ZM28.9 20a4.9 4.9 0 0 0-3.9-1.7c-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-2h.1v1.7h2V18.6h-2V20Zm-3.6 7.5a3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6s3.6 1.6 3.6 3.6c0 1.9-1.4 3.6-3.6 3.6ZM44.2 22.4c-.5-2.4-2.6-4.1-5.4-4.1a5.4 5.4 0 0 0-5.6 5.6c0 3 2.2 5.6 5.6 5.6 2.8 0 4.9-1.8 5.4-4.2h-2.1a3.4 3.4 0 0 1-3.3 2.3 3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6 1.6 0 2.8 1 3.3 2.2h2.1v-.2ZM55.1 20a4.9 4.9 0 0 0-3.9-1.7c-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-2h.1v1.7h2V18.6h-2V20Zm-3.6 7.5a3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6s3.6 1.6 3.6 3.6c0 1.9-1.5 3.6-3.6 3.6ZM68.7 20.2a5 5 0 0 0-3.9-2c-3.1 0-5.4 2.4-5.4 5.7 0 3.3 2.2 5.6 5.4 5.6 1.7 0 3-.8 3.8-1.8h.1v1.5h2V13.8h-2v6.4Zm-3.6 7.3a3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6s3.6 1.6 3.6 3.6c-.1 2-1.5 3.6-3.6 3.6ZM78.3 18.3a5.4 5.4 0 0 0-5.5 5.6c0 3 2.1 5.6 5.5 5.6 2.5 0 4.5-1.3 5.2-3.6h-2.1c-.5 1-1.6 1.6-3 1.6-1.9 0-3.3-1.3-3.4-3h8.8c.2-3.5-2-6.2-5.5-6.2Zm0 1.9c1.7 0 3 1 3.3 2.6h-6.5a3.2 3.2 0 0 1 3.2-2.6ZM98.2 18.3a4 4 0 0 0-3.6 2h-.1c-.6-1.2-1.8-2-3.4-2-1.4 0-2.5.7-3.1 1.8v-1.5h-1.9v10.6h2v-5.4c0-2 1-3.4 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.6-1.4-4.4-3.9-4.4ZM109.4 27.4l-3.6-9h-2.2l4.8 11.7c-.3.9-.7 1.2-1.7 1.2h-2.5v2h2.5c1.8 0 2.8-.8 3.5-2.6l4.7-12.2h-2.1l-3.4 8.9Z" />
+              </g>
+              <defs>
+                <clipPath id="a">
+                  <path " d=" M0 .4h115v33H0z" />
+                </clipPath>
+              </defs>
+            </svg>
         </a>
+      </div>
       </section>
     </footer>
   </div>
